--- a/src/landing/qr-code/QrCode.css
+++ b/src/landing/qr-code/QrCode.css
@@ -1,7 +1,8 @@
 .qr-description{
     float: right;
     padding-left: 1.9rem;
-
+    opacity: 0.5;
+    background-color: #1a1a1a;
 }
 
  .qr-description li  {
